--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </a>
                             </div>
                             <h5 class="mbr-fonts-style display-5">
-                                <a href="page1.html" class="text-white"><strong>Causas</strong></a></h5>
+                                <a href="causas.html" class="text-white"><strong>Causas</strong></a></h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-4">
@@ -82,7 +82,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobiri.se/h">create a web page</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobiri.se/r">free bootstrap templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
