create github pages

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">
                         H2</h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
-                        Full screen intro with background image, color overlay and icons
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">La anemia trae consigo diferentes tipos de consecuencias para quien la padece, pero... ¿qué factores causan anemia? Erróneamente siempre se ha relacionado a la anemia con una mala dieta balanceada en hierro, debido a que el tipo más común es la anemia ferropénica. En esta parte, se muestran otros factores que producen anemia en la persona, al igual que las estrategias o planes de prevención que han creado o utilizado diferentes países con menor índice de prevalencia que la nacional.
                     </p>
                     
 
@@ -54,8 +53,8 @@
                                     <span class="mbr-iconfont mbri-globe"></span>
                                 </a>
                             </div>
-                            <h5 class="mbr-fonts-style display-5">
-                                Estado del Arte</h5>
+                            <h5 class="mbr-fonts-style display-5"><a href="estadodelarte.html" class="text-white"><strong>
+                                Estado del Arte</strong></a></h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-4">
@@ -64,8 +63,8 @@
                                     <span class="mbr-iconfont mbri-extension"></span>
                                 </a>
                             </div>
-                            <h5 class="mbr-fonts-style display-5">
-                                Mapa conceptual: H1 + H2</h5>
+                            <h5 class="mbr-fonts-style display-5"><a href="mapaconceptual.html" class="text-white"><strong>
+                                Mapa conceptual: H1 + H2</strong></a></h5>
                         </div>
 
                         
@@ -82,7 +81,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobiri.se/n">free simple website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
