--- a/causas.html
+++ b/causas.html
@@ -49,13 +49,13 @@
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-success display-4" href="#top"><span class="mbri-up mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span></a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href=".html">H2
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="index.html">H2
                     </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r7OKpTRdX0" id="content5-4">
+<section class="engine"><a href="https://mobiri.se/k">develop your own website</a></section><section class="mbr-section content5 cid-r7OKpTRdX0" id="content5-4">
 
     
 
@@ -169,7 +169,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/020.jpg" alt="Mobirise">
+                        <img src="assets/images/021.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         
