--- a/causas.html
+++ b/causas.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">develop your own website</a></section><section class="mbr-section content5 cid-r7OKpTRdX0" id="content5-4">
+<section class="engine"><a href="https://mobiri.se/n">simple web templates</a></section><section class="mbr-section content5 cid-r7OKpTRdX0" id="content5-4">
 
     
 
@@ -169,7 +169,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/021.jpg" alt="Mobirise">
+                        <img src="assets/images/022.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         
