--- a/mapaconceptual.html
+++ b/mapaconceptual.html
@@ -34,13 +34,13 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-r7PLxJAscO" id="image2-25">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="cid-r7PLxJAscO" id="image2-25">
 
     
 
     <figure class="mbr-figure">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/jumbotron2.jpg" alt="Mobirise">
+            <img src="assets/images/mc-3024x1436.jpg" alt="Mobirise" title="">
             
         </div>
     </figure>
