create github pages

--- a/estadodelarte.html
+++ b/estadodelarte.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/i">site creation software</a></section><section class="mbr-section content5 cid-r7Pphyzc5T" id="content5-1c">
+<section class="engine"><a href="https://mobiri.se/a">online web builder</a></section><section class="mbr-section content5 cid-r7Pphyzc5T" id="content5-1c">
 
     
 
@@ -333,7 +333,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><strong>No carencial</strong> Si se sospecha la anemia no carencial porque el paciente no respondió al tratamiento de la anemia carencial, además de valorar la indicación de tratamiento con hierro oral, solicitaremos cribado de enfermedad celíaca, hormonas tiroideas (TSH y T4), sangre oculta en heces y sistemático y sedimento de orina. Valoraremos derivación a Hematología para completar el estudio.
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><strong>No carencial:</strong> Si se sospecha la anemia no carencial porque el paciente no respondió al tratamiento de la anemia carencial, además de valorar la indicación de tratamiento con hierro oral, solicitaremos cribado de enfermedad celíaca, hormonas tiroideas (TSH y T4), sangre oculta en heces y sistemático y sedimento de orina. Valoraremos derivación a Hematología para completar el estudio.
 </p><p><br></p><p>El resto de anemias, en general, deberán ser valorada por hematólogos pediátricos o no precisarán ningún tratamiento, pero será conveniente proporcionar a las familias la información adecuada.</p><p></p></div>
         </div>
     </div>
