--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
-                            <a href="https://mobirise.com/">
+                            <a href="causas.html">
                                 <span class="mbr-iconfont mbri-logout"></span>
                             </a>
                             </div>
@@ -49,7 +49,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="estadodelarte.html">
                                     <span class="mbr-iconfont mbri-globe"></span>
                                 </a>
                             </div>
@@ -59,7 +59,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-4">
                             <div class="icon-block">
-                                <a href="https://mobirise.com/">
+                                <a href="mapaconceptual.html">
                                     <span class="mbr-iconfont mbri-extension"></span>
                                 </a>
                             </div>
@@ -81,7 +81,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
