create github pages

--- a/causas.html
+++ b/causas.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r7OKpTRdX0" id="content5-4">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section content5 cid-r7OKpTRdX0" id="content5-4">
 
     
 
@@ -392,9 +392,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em>mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-            </div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">Si bien este componente es parte del concepto de vivienda, se considera como un factor aparte porque la intervención directa sobre estos servicios ha demostrado reducir la prevalencia de anemia y mejorar el estado de salud de comunidades.</div>
         </div>
     </div>
 </section>
@@ -672,9 +670,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em>mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-            </div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">Definición: Las enfermedades infecciosas son trastornos provocados por organismos, como bacterias, virus, hongos o parásitos. Muchos organismos viven en y de nuestros cuerpos.</div>
         </div>
     </div>
 </section>
@@ -701,9 +697,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em>mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-            </div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>Las anomalías congénitas se denominan también defectos de nacimiento, trastornos congénitos o malformaciones congénitas. Se trata de anomalías estructurales o funcionales, como los trastornos metabólicos, que ocurren durante la vida intrauterina y se detectan durante el embarazo, en el parto o en un momento posterior de la vida.</p><p><br></p></div>
         </div>
     </div>
 </section>
@@ -752,7 +746,8 @@
 </div><div>Haramoto, E. (1998). Conceptos básicos sobre vivienda y calidad. Obtenido de https://cursoinvi2011. files. wordpress. com/2011/03/haramoto_conceptos_ba fisicos. pdf.
 </div><div>García, S., &amp; Scientific Electronic Library Online. (2015). Definición de acceso y salud. Acceso efectivo a los servicios de salud: operacionalizando la cobertura universal en salud, 57(2). Recuperado de http://www.scielo.org.mx/scielo.php?script=sci_arttext&amp;pid=S0036-36342015000200014#n1a&nbsp; 
 </div><div>Fernandez, P. (2017b, 26 octubre). ¿Qué es la anemia? Recuperado de https://salud-1.com/enfermedades/que-es-la-anemia/
-</div><div>Grille, A., &amp; Sindicato Médico del Uruguay. (s.f.). Error de diagnóstico. Recuperado de https://www.smu.org.uy/publicaciones/noticias/noticias94/art16.htm</div><div>Mandal, A., &amp; News Medical Life Sciences. (2018, 23 agosto). Tratamiento de la anemia. Recuperado de https://www.news-medical.net/health/Treatment-of-anemia-(Spanish).aspx&nbsp;</div><div>Peraza, G., Perez, S., &amp; Figueroa, S. (2001). Desarrollo. Factores asociados al bajo peso al nacer, 17(5).</div><div>Vain, N., &amp; COMITÉ DE ESTUDIOS FETONEONATALES. (s.f.). Anemia del recién nacido prematuro. Recomendaciones para el tratamiento. Recuperado de https://www.sap.org.ar/docs/publicaciones/archivosarg/2000/00_247_249.pdf</div><div><br><br><br></div></div>
+</div><div>Grille, A., &amp; Sindicato Médico del Uruguay. (s.f.). Error de diagnóstico. Recuperado de https://www.smu.org.uy/publicaciones/noticias/noticias94/art16.htm</div><div>Mandal, A., &amp; News Medical Life Sciences. (2018, 23 agosto). Tratamiento de la anemia. Recuperado de https://www.news-medical.net/health/Treatment-of-anemia-(Spanish).aspx&nbsp;</div><div>Peraza, G., Perez, S., &amp; Figueroa, S. (2001). Desarrollo. Factores asociados al bajo peso al nacer, 17(5).</div><div>Vain, N., &amp; COMITÉ DE ESTUDIOS FETONEONATALES. (s.f.). Anemia del recién nacido prematuro. Recomendaciones para el tratamiento. Recuperado de https://www.sap.org.ar/docs/publicaciones/archivosarg/2000/00_247_249.pdf</div><div>Organización Mundial de la Salud. (2016, 7 septiembre). Anomalías congénitas. Recuperado 1 noviembre, 2018, de http://www.who.int/es/news-room/fact-sheets/detail/congenital-anomalies
+</div><div><br><br><br></div></div>
             <hr class="line" style="width: 100%;">
         </div>
         </div>
